--- a/style.css
+++ b/style.css
@@ -84,7 +84,7 @@ body::before {
   background-image: url("images/pattern-background-desktop.svg");
   background-repeat: no-repeat;
   position: absolute;
-  top: 0;
+  top: -10rem;
   left: 0;
   width: 100%;
   height: 100%;
