--- a/style.css
+++ b/style.css
@@ -84,7 +84,7 @@ body::before {
   background-image: url("images/pattern-background-desktop.svg");
   background-repeat: no-repeat;
   position: absolute;
-  top: 0;
+  top: -6rem;
   left: 0;
   width: 100%;
   height: 100%;
@@ -151,6 +151,12 @@ body::before {
   body::before {
     background-image: url("images/pattern-background-mobile.svg");
     top: 0;
+  }
+}
+
+@media (min-width: 1300px) {
+  body::before {
+    top: 0rem;
   }
 }
 
